feat: validate weakness password
